--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "standard --fix",
     "preview": "vite preview",
-    "start": "npm install "
+    "start": "node --watch app.js "
   },
   "dependencies": {
     "react": "^19.0.0",
