--- a/api/package.json
+++ b/api/package.json
@@ -2,11 +2,13 @@
   "dependencies": {
     "bcrypt": "^5.1.1",
     "body-parser": "^2.2.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.1",
+    "mysql2": "^3.14.1",
     "paypal-ipn": "^3.0.0",
     "zod": "^3.24.2"
   },
