--- a/api/.env
+++ b/api/.env
@@ -1,6 +1,6 @@
 SECRET=1234
-DB_HOST="localhost"
-DB_USER=root
-DB_PASSWORD=1234
-DB_NAME=sistem
-URL=URLAQUI
+DB_HOST=biyics4gsunhdwjwohx5-mysql.services.clever-cloud.com
+DB_USER=uyxixn45eisg6acx
+DB_PASSWORD=46yxpIfDwqE4zM0KTo3f
+DB_NAME=biyics4gsunhdwjwohx5
+URL=https://web-ten-pi-26.vercel.app
