--- a/front/package.json
+++ b/front/package.json
@@ -11,10 +11,12 @@
     "start": "node --watch app.js "
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "@vitejs/plugin-rsc": "^0.5.3",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.5.0"
+    "react-router-dom": "^7.5.0",
+    "react-server-dom-webpack": "^19.2.1"
   },
   "eslintConfig": {
     "extends": [
